--- a/style.css
+++ b/style.css
@@ -1,31 +1,31 @@
 /*Declaring various font families*/
 @font-face {
     font-family: "creepy";
-    src: url(sword/fonts/creepy.ttf);
+    src: url(/fonts/creepy.ttf);
 }
 @font-face {
     font-family: "handwrite";
-    src: url(sword/fonts/handwrite.ttf);
+    src: url(/fonts/handwrite.ttf);
 }
 @font-face {
     font-family: "normaltext";
-    src: url(sword/fonts/normaltext.ttf);
+    src: url(/fonts/normaltext.ttf);
 }
 @font-face {
     font-family: "normaltitle";
-    src: url(sword/fonts/normaltitle.ttf);
+    src: url(/fonts/normaltitle.ttf);
 }
 @font-face {
     font-family: "nostalgia";
-    src: url(sword/fonts/nostalgia.ttf);
+    src: url(/fonts/nostalgia.ttf);
 }
 @font-face {
     font-family: "nostyle";
-    src: url(sword/fonts/nostyle.ttf);
+    src: url(/fonts/nostyle.ttf);
 }
 @font-face {
     font-family: "why";
-    src: url(sword/fonts/why.ttf);
+    src: url(/fonts/why.ttf);
 }
 
 /*General styling*/
@@ -41,17 +41,7 @@ body{
     background: url(images/bg.jpg) no-repeat center center fixed;
     background-size: cover;
     height: 100%;
-    overflow: hidden;
 }
-
-/*#bgim{
-    min-height: 100%;
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-}*/
 
 p{
     text-align: justify;
@@ -89,4 +79,12 @@ nav p {
 
 .inlineLink {
     text-decoration: underline;
+}
+
+img{
+    width: 20%;
+}
+
+.forinline{
+    display: inline;
 }
