--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body{
     background: url(images/bg.jpg) no-repeat center center fixed;
     background-size: cover;
     height: 100%;
+    
 }
 
 p{
@@ -103,8 +104,18 @@ footer{
     width: 90%;
     /*background-color: #222222;*/
     padding: 0.5em;
+    display: flex;
+    align-content: flex-end;
 }
 
 footer p{
     text-align: center !important;
+}
+
+i{
+    color: white;
+    text-decoration: none;
+    font-size: 2em;
+    margin: 0.2em 0.5em 0.2em 0.5em;
+    text-align: center;
 }
