--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html{
     height: 100%;
 }
 
-p, h2, h3, button, li, td{
+p, h2, h3, button, li, td, label, form{
     font-family: "normaltext";
     font-weight: 400;
     color: white;
@@ -102,15 +102,6 @@ img{
     max-width: 100%;
 }
 
-textarea{
-    max-height: 2em;
-    max-width: 30%;
-    height: 1.6em;
-    width: 30%;
-    display: block;
-    font-size: 1.5em;
-}
-
 button{
     background: transparent;
     color: white;
@@ -153,28 +144,28 @@ li{
 }
 
 #creepy{
-    font-family: "creepy";
+    font-family: "creepy" !important;
 }
 
 #hand{
-    font-family: "handwrite";
+    font-family: "handwrite" !important;
 }
 
 #normal{
-    font-family: "normaltext";
+    font-family: "normaltext" !important;
 }
 
 #no{
-    font-family: "nostyle";
+    font-family: "nostyle" !important;
 }
 
 #nostalgia{
-    font-family: "nostalgia";
+    font-family: "nostalgia" !important;
     word-wrap: normal;
 }
 
 #why{
-    font-family: "normaltext";
+    font-family: "normaltext" !important;
 }
 
 /*Grid styling*/
@@ -244,13 +235,6 @@ main{
 }
 
 @media only screen and (min-width: 600px){
-    main{
-        display: flex;
-        flex-flow: row;
-        justify-content: space-around;
-        flex-wrap: wrap;
-    }
-
     .hist{
         max-width: 40%;
         min-width: 40%;
@@ -320,17 +304,28 @@ main{
     }
 }
 
+/*Form Styling*/
+
 .from{
     flex-direction: column;
 }
 
-.from button{
+#butt{
     max-width: 20%;
+    width: 10%;
+    background-color: white;
+    color: black;
+    border-radius: 1em;
+    border: none;
 }
 
-#comments{
+input{
+    margin: 1em 0em 1em 0em;
+}
+
+#com{
     max-width: 40%;
     max-height: 10%;
-    height: 3em !important;
+    height: 3.5em !important;
     width: 40%;
 }
