--- a/scripts/hist.css
+++ b/scripts/hist.css
@@ -118,6 +118,12 @@
    overflow:hidden;
    visibility:hidden;
 }
+
+@media only screen and  (max-width: 825px){
+   #jssor_1{
+      margin-top: 10vh;
+   }
+}
 .jssorl-009-spin{
    position:absolute;
    top:0px;
@@ -185,85 +191,105 @@
 /*My styling*/
 
 #jssor_1{
-    display: none;
+   display: none;
+}
+
+#hider{
+  display: none;
+}
+
+.small{
+  display: unset !important;
+}
+
+.hidden{
+  display: inherit;
 }
 
 @media only screen and (min-width: 600px){
-    #jssor_1{
-        display: unset;
-    }
+   #jssor_1{
+       display: unset;
+   }
 
-    #small{
-        display: none;
-    }
+   #hider{
+      display: unset;
+   }
 
-    .hist{
+   .small{
+      display: unset;
+   }
+
+   .hidden{
+      display: none !important;
+   }
+
+    .hist2{
         display: flex !important; 
         flex-wrap: wrap;
         flex-direction: row;
     }
 
-    .hist h3{
-        margin: 0px 30% 0px 45% !important;
+    .hist2 h3{
+        margin: 0 50vw 0px 45vw !important;
         font-size: 1.5em;
     }
 
-    .hist img{
-        max-width: 50% !important;
-        max-height: 50%;
-        margin: 0px 3% 0% 4%;
+    .hist2 img{
+        max-width: 25vw !important;
+        max-height: 25vw;
+        margin: 0px 1.5vw 0vw 11vw;
     }
 
     #odd1{
-        max-width: 50% !important;
-        max-height: 50%;
-        margin: 0px 2% 0% 4%;
+        max-width: 25vw !important;
+        max-height: 25vw;
+        margin: 0px 2vw 0vw 11vw;
     }
 
     #odd2{
-        max-width: 40% !important;
-        max-height: 40%;
-        margin: 0px 2% 0% 4%;
+        max-width: 25vw !important;
+        max-height: 25vw;
+        margin: 0px 2vw 0vw 11vw;
     }
 
     #odd3{
-        max-width: 40% !important;
-        max-height: 40%;
-        margin: 0px 2% 0% 5%;
+        max-width: 25vw !important;
+        max-height: 25vw;
+        margin: 0px 2vw 0vw 11vw;
     }
 
     #odd4{
-        max-width: 65% !important;
-        max-height: 65%;
-        margin: 0px 2% 0% 8%;
+        max-width: 25vw !important;
+        max-height: 25vw;
+        margin: 0px 2vw 0vw 11vw;
     }
 
     #odd5{
-        max-width: 65% !important;
-        max-height: 65%;
-        margin: 0px 2% 0% 8%;
+        max-width: 25vw !important;
+        max-height: 25vw;
+        margin: 0px 2vw 0vw 11vw;
     }
 
-    .hist p{
-        font-size: 0.8em !important;
+    .hist2 p{
+        font-size: 0.7em !important;
         word-wrap: normal;
-        max-width: 50%;
+        max-width: 47vw;
     }
 }
 
 @media only screen and (min-width: 1200px){
-    .hist{
+    .hist2{
         display: flex !important; 
         flex-wrap: wrap;
         flex-direction: row;
     }
 
-    .hist h3{
+    .hist2 h3{
         margin: 0px 30% 0px 45% !important;
         font-size: 1.5em;
     }
 
-    .hist img{
+    .hist2 img{
         max-width: 60% !important;
         max-height: 60%;
         margin: 0px 2% 0% 8%;
@@ -299,7 +325,7 @@
         margin: 0px 2% 0% 8%;
     }
 
-    .hist p{
+    .hist2 p{
         font-size: 0.6em !important;
         word-wrap: normal;
         max-width: 45%;
