--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p, h2, h3, button, li, td, label, form{
 }
 
 body{
-    background-color: black;
+    background-color: black !important;
     background: url(images/bg.jpg) no-repeat center center fixed;
     background-size: cover;
     min-height: 100%;
@@ -106,6 +106,8 @@ img{
 button{
     background: transparent;
     color: white;
+    margin-left: 43vw;
+    position: relative;
 }
 
 footer{
